turtleart.lessons.turtleart.Main.House.scala.error
Source:7: error: not found: value driote
	driote(90);
        ^