turtleart.lessons.turtleart.Main.House.scala.code
override def run() {

for (i <- 1 to 5)
{
	avance(100);
	driote(90);
}

droite(30);
for (i <- 1 to 3)
{
	avance(100);
	droite(120);
}

gauche(30);
recule(100);

}
